updated CSS and HTML

--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
         <aside>
             <h2>Brittany Boughter</h2>
             <img class=resize src="./assets/IMG_7668.jpg" alt="Picture of me" />
-            <p class=resize>I am currently taking a boot camp to become a Full Stack Developer.
+            <h3>About Me</h3>
+            <p class=resize>I am currently enrolled in a boot camp at UCLA extension campus to become a Full Stack Developer.
                 I was a police dispatcher for the last 10 years and I am excited to embark
                 on my new journey in tech. </p>
         </aside>
-        
+
         <div class="sections">
             <section class="projects">
                 <header>Project 1</header>
-                <img src="assets/Screenshot 1.png" alt="screenshot of first project exectuted which is a website showing an image of a seo meeting" />
+                <img src="assets/Screenshot 1.png"
+                    alt="screenshot of first project exectuted which is a website showing an image of a seo meeting" />
                 <p></p>
             </section>
             <section class="projects">
@@ -50,18 +52,22 @@
                 <img src="assets/OIP (4).jpg" alt="purple background with shapes overlapping each other" />
                 <p></p>
             </section>
-              <section class="projects">
+            <section class="projects">
                 <header>Project 5</header>
-                <img src="assets/OIP.jpg" alt="burger with lettuce, tomato, bbq sauce, cheese, and crispy onion straws" />
+                <img src="assets/OIP.jpg"
+                    alt="burger with lettuce, tomato, bbq sauce, cheese, and crispy onion straws" />
                 <p></p>
             </section>
         </div>
     </main>
-
+    <section id="contact-info">
+        <ul>
+            <li>Contact Me</li>
+            <li><span id="email">brittany.wood0308@yahoo.com</span></li>
+            <li><a id="github" href="https://github.com/Bboughter"></a></li>
+    </section>
 
     <footer>
-      <h1>Contact Info</h1>
+        <h3>@2023</h3>
     </footer>
 </body>
-
-</html>
