--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>My Portfolio</h1>
 
     </header>
-    <nav class="navigation">
+    <nav>
         <ul>
             <li><a href="#about">About Me</a></li>
             <li><a href="#projects">My Projects</a></li>
@@ -25,7 +25,7 @@
             <h2>Brittany Boughter</h2>
             <img class=resize src="./assets/IMG_7668.jpg" alt="Picture of me" />
             <h3>About Me</h3>
-            <p class=resize>I am currently enrolled in a boot camp at UCLA extension campus to become a Full Stack Developer.
+            <p>I am currently enrolled in a boot camp at UCLA extension campus to become a Full Stack Developer.
                 I was a police dispatcher for the last 10 years and I am excited to embark
                 on my new journey in tech. </p>
         </aside>
