fixed header and CSS for header

--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
 
 <body>
     <header>
-        <h1>My Portfolio</h1>
+        <h1>Brittany Boughter</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">My Projects</a></li>
+                <li><a href="#contact-info">Contact Info</a></li>
+            </ul>
+        </nav>
 
     </header>
-    <nav>
+    <!-- <nav>
         <ul>
             <li><a href="#about">About Me</a></li>
             <li><a href="#projects">My Projects</a></li>
             <li><a href="#contact-info">Contact Info</a></li>
         </ul>
-    </nav>
+    </nav> -->
     <main>
         <aside>
-            <h2>Brittany Boughter</h2>
             <img class=resize src="./assets/IMG_7668.jpg" alt="Picture of me" />
             <h3>About Me</h3>
             <p>I am currently enrolled in a boot camp at UCLA extension campus to become a Full Stack Developer.
@@ -32,28 +38,28 @@
 
         <div class="sections">
             <section class="projects">
-                <header>Project 1</header>
+                <h3>Project 1</h3>
                 <img src="assets/Screenshot 1.png"
                     alt="screenshot of first project exectuted which is a website showing an image of a seo meeting" />
                 <p></p>
             </section>
             <section class="projects">
-                <header>Project 2</header>
+                <h3>Project 2</h3>
                 <img src="assets/OIP (1).jpg" alt="fried fish with a steak on top and sliced onions on top" />
                 <p></p>
             </section>
             <section class="projects">
-                <header>Project 3</header>
+                <h3>Project 3</h3>
                 <img src="assets/OIP (3).jpg" alt="purple background with two triangles overlapping a square" />
                 <p></p>
             </section>
             <section class="projects">
-                <header>Project 4</header>
+                <h3>Project 4</h3>
                 <img src="assets/OIP (4).jpg" alt="purple background with shapes overlapping each other" />
                 <p></p>
             </section>
             <section class="projects">
-                <header>Project 5</header>
+                <h3>Project 5</h3>
                 <img src="assets/OIP.jpg"
                     alt="burger with lettuce, tomato, bbq sauce, cheese, and crispy onion straws" />
                 <p></p>
