--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class = "linear-gradiant-background">
         <h1>Brittany Boughter</h1>
         <nav>
             <ul>
@@ -20,13 +20,7 @@
         </nav>
 
     </header>
-    <!-- <nav>
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#projects">My Projects</a></li>
-            <li><a href="#contact-info">Contact Info</a></li>
-        </ul>
-    </nav> -->
+
     <main>
         <aside>
             <img class=resize src="./assets/IMG_7668.jpg" alt="Picture of me" />
@@ -66,14 +60,18 @@
             </section>
         </div>
     </main>
-    <section id="contact-info">
-        <ul>
-            <li>Contact Me</li>
-            <li><span id="email">brittany.wood0308@yahoo.com</span></li>
-            <li><a id="github" href="https://github.com/Bboughter"></a></li>
-    </section>
-
     <footer>
+        <section id="contact-info">
+            <ul>
+                <h4>Contact Me:</h4>
+                <li><span id="email">brittany.wood0308@yahoo.com</span></li>
+                <li class="github-icon"><a href="https://github.com/Bboughter"><svg xmlns="http://www.w3.org/2000/svg" alt="The github logo"
+                            width="40" height="40" fill="#6e5494" class="bi bi-github" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z">
+                            </path>
+                        </svg></a></li>
+        </section>
         <h3>@2023</h3>
     </footer>
 </body>
