added id's to scroll

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Brittany Boughter</h1>
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">My Projects</a></li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#my-projects">My Projects</a></li>
                 <li><a href="#contact-info">Contact Info</a></li>
             </ul>
         </nav>
@@ -22,15 +22,15 @@
     </header>
 
     <main>
-        <aside>
-            <img class=resize src="./assets/IMG_7668.jpg" alt="Picture of me" />
+        <aside id="about-me">
             <h3>About Me</h3>
+            <img class=resize src="./assets/IMG_7668.jpg" alt="Picture of me" />
             <p>I am currently enrolled in a boot camp at UCLA extension campus to become a Full Stack Developer.
                 I was a police dispatcher for the last 10 years and I am excited to embark
                 on my new journey in tech. </p>
         </aside>
 
-        <div class="sections">
+        <div id="my-projects">
             <section class="projects">
                 <h3>Project 1</h3>
                 <img src="assets/Screenshot 1.png"
