updated about me

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Responsive Web Design</title>
+    <title>Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -25,16 +25,16 @@
         <aside id="about-me">
             <h3>About Me</h3>
             <img class=resize src="./assets/IMG_7668.jpg" alt="Picture of me" />
-            <p>I am currently enrolled in a boot camp at UCLA extension campus to become a Full Stack Developer.
+            <p>I am currently enrolled in a coding boot camp at the UCLA extension campus to become a Full Stack Developer.
                 I was a police dispatcher for the last 10 years and I am excited to embark
-                on my new journey in tech. </p>
+                on my new journey in the tech industry. On my free time, I enjoy being with my two boys and crafting.</p>
         </aside>
 
         <div id="my-projects">
             <section class="projects">
                 <h3>Project 1</h3>
-                <img src="assets/Screenshot 1.png"
-                    alt="screenshot of first project exectuted which is a website showing an image of a seo meeting" />
+                <a href="https://bboughter.github.io/code-refactor/> <img src="assets/Screenshot 1.png"
+                    alt="screenshot of first project exectuted which is a website showing an image of a seo meeting" /></a>
                 <p></p>
             </section>
             <section class="projects">
