linked image to website

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="my-projects">
             <section class="projects">
                 <h3>Project 1</h3>
-                <a href="https://bboughter.github.io/code-refactor/> <img src="assets/Screenshot 1.png"
+                <a href="https://bboughter.github.io/code-refactor/"> <img src="assets/Screenshot 1.png"
                     alt="screenshot of first project exectuted which is a website showing an image of a seo meeting" /></a>
                 <p></p>
             </section>
