read.me added screenshots

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class = "linear-gradiant-background">
+    <header>
         <h1>Brittany Boughter</h1>
         <nav>
             <ul>
