--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </section>
             <section class="projects">
                 <h3>Project 2</h3>
-                <img src="assets/OIP (1).jpg" alt="fried fish with a steak on top and sliced onions on top" />
+                <a href="https://github.com/samanthaahn/fiesta-event"><img src="assets/Screenshot 2023-03-27 at 10.08.08 AM.png" 
+                    alt="LitList loaded webpage with options to search by author or genre buttons" /></a>
                 <p></p>
             </section>
             <section class="projects">
